# flockwave-app-framework

./: .gitignore  LICENSE.md  README.md  pyproject.toml  tbump.toml
src/flockwave/app_framework/: __init__.py  asgi_app.py  base.py  configurator.py  daemon_app.py  errors.py  hacks.py  instrumentation.py  sd_notify.py  terminal_app.py  version.py
