[project]
name = "flockwave-app-framework"
version = "3.2.3"
description = "Generic app framework for CLI based apps in the Skybrush suite"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com>" }]
license = "MIT"
requires-python = ">=3.9,<4.0"
dependencies = [
    "trio>=0.24.0",
    "json5>=0.9.14",
    "exceptiongroup>=1.1.3",
    "tomli>=2.0.1; python_version < \"3.11\"",
]

[project.optional-dependencies]
asgi = ["uvicorn[standard]>=0.23.2"]
daemon = ["flockwave-conn>=8.4.1", "flockwave-ext>=1.24.2"]
console = ["urwid-uikit>=2.0.1"]

[tool.poetry]
packages = [{ include = "flockwave", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
flockwave-conn = { source = "fury" }
flockwave-ext = { source = "fury" }
urwid-uikit = { source = "fury" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = { extras = ["toml"], version = "^7.3.0" }
pytest-cov = "^5.0.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
