[project]
name = "flockwave-app-framework"
version = "3.6.0"
description = "Generic app framework for CLI based apps in the Skybrush suite"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com>" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "trio (>=0.30.0)",
  "json5 (>=0.12.0)",
  "exceptiongroup (>=1.3.0)",
  "tomli (>=2.2.1) ; python_version < \"3.11\"",
]

[project.optional-dependencies]
asgi = ["uvicorn[standard] (>=0.34.3)"]
daemon = ["flockwave-conn (>=9.2.0)", "flockwave-ext>=1.27.0"]
console = ["urwid-uikit>=2.1.1"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "coverage[toml]>=7.9.1",
  "pytest-cov>=6.2.1",
  "flockwave-app-framework[asgi, daemon, console]",
]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.uv.sources]
flockwave-conn = { index = "fury" }
flockwave-ext = { index = "fury" }
urwid-uikit = { index = "fury" }

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv-build>=0.9"]
build-backend = "uv_build"
